# pltrs

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
crates/pltrs_backend_wgpu/: Cargo.toml
crates/pltrs_backend_wgpu/src/: app.rs  backend.rs  lib.rs  line_shader.wgsl  scatter_shader.wgsl  shader.wgsl  vertex.rs
crates/pltrs_core/: Cargo.toml
crates/pltrs_core/src/: layout.rs  lib.rs  plot.rs  render.rs  scale.rs  scene.rs  style.rs
crates/pltrs_geom/: Cargo.toml
crates/pltrs_python/: Cargo.toml  pltrs.pyi
crates/pltrs_python/src/: bar.rs  data.rs  lib.rs  line.rs  plot.rs  scatter.rs
crates/pltrs_text/: Cargo.toml
crates/pltrs_text/src/: lib.rs
examples/benchmarks/: benchmark_offscreen_line_scaling.py  benchmark_offscreen_render.py  benchmark_window_render.py  matplotlib_line_plot.py  matplotlib_line_plot_short.py
examples/python/: bar_plot.py  finals_stress_bar_plot.py  line_plot.py  scatter_plot.py
src/: lib.rs
